Tech Expertise section changes.(16 Jan) Alignment issues. Text shadow effect on user icon- teams' page

--- a/css/demo.css
+++ b/css/demo.css
@@ -1086,8 +1086,31 @@ footer{
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
 }
+/*.services-section-main-content{*/
+/*    height: 400px;*/
+/*}*/
+
 .servicer-section-content{
-    height: 230px;
+     height: 230px;
+ }
+.servicer-section-content p{
+    height: 80px;
+}
+@media(min-width: 768px) and (max-width: 1023px){
+    .servicer-section-content{
+        height: 220px;
+    }
+    .servicer-section-content p{
+        height: 70px;
+    }
+}
+@media(min-width: 1024px) and (max-width: 1366px){
+    .servicer-section-content{
+        height: 250px;
+    }
+    .servicer-section-content p{
+        height: 100px;
+    }
 }
 .service-content-row1 {
     height: 598px;
@@ -2292,7 +2315,7 @@ svg {
         width: 48%;
         margin-top: 4%;
         margin-bottom: 4%;
-        height: 200px;
+        height: 242px;
     }
     .csw-content-wrapper {
         margin-top: 40px;
@@ -2376,6 +2399,7 @@ svg {
 }
 .services-section-img img{
     width: 100%;
+    height: 150px!important;
 }
 .home .anim-slider .parallax , .banerSection{
     background-attachment: fixed;
@@ -2435,6 +2459,21 @@ svg {
     margin-bottom: -50px;
     padding-top: 50px;
 }
+.banner .content-mvp{
+    padding-top: 10px;
+    margin-bottom: 20px;
+}
+@media(max-width:767px){
+    .banner .content-mvp{
+        padding-top: 50px;
+    }
+}
+@media(min-width:768px)and (max-width:1300px){
+    .banner .content-mvp{
+        padding-top: 10px;
+    }
+}
+
 @media(max-width:767px){
     .banner p{
         margin-top: 15px!important;
@@ -2542,12 +2581,37 @@ img#github-logo{
 .grey-tooltip + .tooltip > .tooltip-arrow {
     border-bottom-color:#6a6a6a;
 }
+.content-section-three-layer{
+    height: 320px;
+}
+.content-section-three-layer p{
+    margin-bottom: 10px;
+    padding: 5px 0;
+}
+.content-section{
+    height: 188px;
+}
+/*@media(min-width:992px)and(max-width:1024px){*/
+/*    .content-section{*/
+/*        height: 230px;*/
+/*    }*/
+/*}*/
+@media(min-width:768px) and (max-width:1024px){
+    .content-section{
+        height:220px;
+    }
+}
+@media(max-width:767px){
+    .content-section{
+        height: 120px;
+    }
+}
 .content-section p{
     margin-bottom: 10px;
     padding: 5px 0;
 }
 .services-section-img{
-    max-height: 150px;
+    max-height: 150px!important;
 }
 .primary-btn:hover, .tertiary-btn:hover{
     background: #c54041;
